--- a/apps/katuri-web/package.json
+++ b/apps/katuri-web/package.json
@@ -29,6 +29,7 @@
     "@types/react-dom": "^18.2.19",
     "@vanilla-extract/next-plugin": "^2.4.0",
     "eslint": "^8.57.0",
+    "next-pwa": "^5.6.0",
     "typescript": "^5.3.3"
   }
 }
