--- a/apps/katuri-web/public/manifest.json
+++ b/apps/katuri-web/public/manifest.json
@@ -9,7 +9,7 @@
   "start_url": "/",
   "icons": [
     {
-      "src": "/icons.png",
+      "src": "/tt.png",
       "sizes": "192x192",
       "type": "image/png",
       "purpose": "any maskable"
