--- a/apps/katuri-web/package.json
+++ b/apps/katuri-web/package.json
@@ -14,6 +14,7 @@
     "@tanstack/react-query": "^5.32.0",
     "@vanilla-extract/css": "^1.15.1",
     "axios": "^1.6.8",
+    "firebase": "^10.11.1",
     "jotai": "^2.8.0",
     "next": "^14.1.1",
     "react": "^18.2.0",
