--- a/apps/katuri-server/package.json
+++ b/apps/katuri-server/package.json
@@ -16,7 +16,8 @@
     "mongodb": "^6.5.0",
     "mongoose": "^8.3.2",
     "ts-node": "^10.9.2",
-    "typescript": "^5.4.5"
+    "typescript": "^5.4.5",
+    "web-push": "^3.6.7"
   },
   "devDependencies": {
     "@types/express": "^4.17.21",
